@@ -1,8 +1,8 @@
-From f279bc5336dda19741a5996a108da42dd3201366 Mon Sep 17 00:00:00 2001
+From 1ef01359e5ab267ea13253cea688869697f7ff0d Mon Sep 17 00:00:00 2001
 From: =?UTF-8?q?Alicia=20Boya=20Garc=C3=ADa?= <aboya@igalia.com>
-Date: Fri, 21 Sep 2018 16:23:57 +0200
-Subject: [PATCH 8/9] matroskademux: Refactor track parsing out from adding
- tracks
+Date: Mon, 24 Sep 2018 17:20:15 +0200
+Subject: [PATCH] (backport for 1.4.13) matroskademux: Refactor track parsing
+ out from adding tracks
 
 This splits gst_matroska_demux_add_stream() into:
 
@@ -17,14 +17,14 @@ This splits gst_matroska_demux_add_stream() into:
 
 https://bugzilla.gnome.org/show_bug.cgi?id=793333
 ---
- gst/matroska/matroska-demux.c | 120 +++++++++++++++++++++-------------
- 1 file changed, 75 insertions(+), 45 deletions(-)
+ gst/matroska/matroska-demux.c | 114 +++++++++++++++++++++-------------
+ 1 file changed, 72 insertions(+), 42 deletions(-)
 
 diff --git a/gst/matroska/matroska-demux.c b/gst/matroska/matroska-demux.c
-index 24a729485..0e2157a15 100644
+index 3f329ed6e..7c8990cf4 100644
 --- a/gst/matroska/matroska-demux.c
 +++ b/gst/matroska/matroska-demux.c
-@@ -592,21 +592,16 @@ beach:
+@@ -575,21 +575,16 @@ beach:
  }
  
  static GstFlowReturn
@@ -48,7 +48,7 @@ index 24a729485..0e2157a15 100644
  
    DEBUG_ELEMENT_START (demux, ebml, "TrackEntry");
  
-@@ -619,8 +614,6 @@ gst_matroska_demux_add_stream (GstMatroskaDemux * demux, GstEbmlRead * ebml)
+@@ -602,8 +597,6 @@ gst_matroska_demux_add_stream (GstMatroskaDemux * demux, GstEbmlRead * ebml)
    /* allocate generic... if we know the type, we'll g_renew()
     * with the precise type */
    context = g_new0 (GstMatroskaTrackContext, 1);
@@ -57,7 +57,7 @@ index 24a729485..0e2157a15 100644
    context->index_writer_id = -1;
    context->type = 0;            /* no type yet */
    context->default_duration = 0;
-@@ -637,10 +630,9 @@ gst_matroska_demux_add_stream (GstMatroskaDemux * demux, GstEbmlRead * ebml)
+@@ -620,10 +613,9 @@ gst_matroska_demux_add_stream (GstMatroskaDemux * demux, GstEbmlRead * ebml)
    context->dts_only = FALSE;
    context->intra_only = FALSE;
    context->tags = gst_tag_list_new_empty ();
@@ -70,7 +70,7 @@ index 24a729485..0e2157a15 100644
  
    /* try reading the trackentry headers */
    while (ret == GST_FLOW_OK && gst_ebml_read_has_remaining (ebml, 1, TRUE)) {
-@@ -659,12 +651,6 @@ gst_matroska_demux_add_stream (GstMatroskaDemux * demux, GstEbmlRead * ebml)
+@@ -642,12 +634,6 @@ gst_matroska_demux_add_stream (GstMatroskaDemux * demux, GstEbmlRead * ebml)
            GST_ERROR_OBJECT (demux, "Invalid TrackNumber 0");
            ret = GST_FLOW_ERROR;
            break;
@@ -83,7 +83,7 @@ index 24a729485..0e2157a15 100644
          }
  
          GST_DEBUG_OBJECT (demux, "TrackNumber: %" G_GUINT64_FORMAT, num);
-@@ -731,8 +717,6 @@ gst_matroska_demux_add_stream (GstMatroskaDemux * demux, GstEbmlRead * ebml)
+@@ -714,8 +700,6 @@ gst_matroska_demux_add_stream (GstMatroskaDemux * demux, GstEbmlRead * ebml)
              context->type = 0;
              break;
          }
@@ -92,7 +92,7 @@ index 24a729485..0e2157a15 100644
          break;
        }
  
-@@ -751,8 +735,6 @@ gst_matroska_demux_add_stream (GstMatroskaDemux * demux, GstEbmlRead * ebml)
+@@ -734,8 +718,6 @@ gst_matroska_demux_add_stream (GstMatroskaDemux * demux, GstEbmlRead * ebml)
            break;
          }
          videocontext = (GstMatroskaTrackVideoContext *) context;
@@ -101,7 +101,7 @@ index 24a729485..0e2157a15 100644
  
          while (ret == GST_FLOW_OK &&
              gst_ebml_read_has_remaining (ebml, 1, TRUE)) {
-@@ -1033,8 +1015,6 @@ gst_matroska_demux_add_stream (GstMatroskaDemux * demux, GstEbmlRead * ebml)
+@@ -1011,8 +993,6 @@ gst_matroska_demux_add_stream (GstMatroskaDemux * demux, GstEbmlRead * ebml)
            break;
  
          audiocontext = (GstMatroskaTrackAudioContext *) context;
@@ -110,7 +110,7 @@ index 24a729485..0e2157a15 100644
  
          while (ret == GST_FLOW_OK &&
              gst_ebml_read_has_remaining (ebml, 1, TRUE)) {
-@@ -1363,11 +1343,9 @@ gst_matroska_demux_add_stream (GstMatroskaDemux * demux, GstEbmlRead * ebml)
+@@ -1341,11 +1321,9 @@ gst_matroska_demux_add_stream (GstMatroskaDemux * demux, GstEbmlRead * ebml)
      if (ret == GST_FLOW_OK || ret == GST_FLOW_EOS)
        GST_WARNING_OBJECT (ebml, "Unknown stream/codec in track entry header");
  
@@ -124,7 +124,7 @@ index 24a729485..0e2157a15 100644
      return ret;
    }
  
-@@ -1378,21 +1356,16 @@ gst_matroska_demux_add_stream (GstMatroskaDemux * demux, GstEbmlRead * ebml)
+@@ -1356,14 +1334,12 @@ gst_matroska_demux_add_stream (GstMatroskaDemux * demux, GstEbmlRead * ebml)
    if (cached_taglist)
      gst_tag_list_insert (context->tags, cached_taglist, GST_TAG_MERGE_APPEND);
  
@@ -140,14 +140,7 @@ index 24a729485..0e2157a15 100644
        caps = gst_matroska_demux_video_caps (videocontext,
            context->codec_id, context->codec_priv,
            context->codec_priv_size, &codec, &riff_fourcc);
- 
--      if (!context->intra_only)
--        demux->have_nonintraonly_v_streams = TRUE;
--
-       if (codec) {
-         gst_tag_list_add (context->tags, GST_TAG_MERGE_REPLACE,
-             GST_TAG_VIDEO_CODEC, codec, NULL);
-@@ -1406,8 +1379,6 @@ gst_matroska_demux_add_stream (GstMatroskaDemux * demux, GstEbmlRead * ebml)
+@@ -1381,8 +1357,6 @@ gst_matroska_demux_add_stream (GstMatroskaDemux * demux, GstEbmlRead * ebml)
        GstMatroskaTrackAudioContext *audiocontext =
            (GstMatroskaTrackAudioContext *) context;
  
@@ -156,7 +149,7 @@ index 24a729485..0e2157a15 100644
        caps = gst_matroska_demux_audio_caps (audiocontext,
            context->codec_id, context->codec_priv, context->codec_priv_size,
            &codec, &riff_audio_fmt);
-@@ -1425,8 +1396,6 @@ gst_matroska_demux_add_stream (GstMatroskaDemux * demux, GstEbmlRead * ebml)
+@@ -1400,8 +1374,6 @@ gst_matroska_demux_add_stream (GstMatroskaDemux * demux, GstEbmlRead * ebml)
        GstMatroskaTrackSubtitleContext *subtitlecontext =
            (GstMatroskaTrackSubtitleContext *) context;
  
@@ -165,7 +158,7 @@ index 24a729485..0e2157a15 100644
        caps = gst_matroska_demux_subtitle_caps (subtitlecontext,
            context->codec_id, context->codec_priv, context->codec_priv_size);
        break;
-@@ -1498,9 +1467,59 @@ gst_matroska_demux_add_stream (GstMatroskaDemux * demux, GstEbmlRead * ebml)
+@@ -1468,9 +1440,56 @@ gst_matroska_demux_add_stream (GstMatroskaDemux * demux, GstEbmlRead * ebml)
          context->stream_headers, caps);
    }
  
@@ -200,9 +193,6 @@ index 24a729485..0e2157a15 100644
 +    case GST_MATROSKA_TRACK_TYPE_VIDEO:
 +      padname = g_strdup_printf ("video_%u", demux->num_v_streams++);
 +      templ = gst_element_class_get_pad_template (klass, "video_%u");
-+
-+      if (!context->intra_only)
-+        demux->have_nonintraonly_v_streams = TRUE;
 +      break;
 +
 +    case GST_MATROSKA_TRACK_TYPE_AUDIO:
@@ -226,7 +216,7 @@ index 24a729485..0e2157a15 100644
  
    gst_pad_set_event_function (context->pad,
        GST_DEBUG_FUNCPTR (gst_matroska_demux_handle_src_event));
-@@ -1508,7 +1527,7 @@ gst_matroska_demux_add_stream (GstMatroskaDemux * demux, GstEbmlRead * ebml)
+@@ -1478,7 +1497,7 @@ gst_matroska_demux_add_stream (GstMatroskaDemux * demux, GstEbmlRead * ebml)
        GST_DEBUG_FUNCPTR (gst_matroska_demux_handle_src_query));
  
    GST_INFO_OBJECT (demux, "Adding pad '%s' with caps %" GST_PTR_FORMAT,
@@ -235,7 +225,7 @@ index 24a729485..0e2157a15 100644
  
    gst_pad_set_element_private (context->pad, context);
  
-@@ -1576,9 +1595,6 @@ gst_matroska_demux_add_stream (GstMatroskaDemux * demux, GstEbmlRead * ebml)
+@@ -1543,9 +1562,6 @@ gst_matroska_demux_add_stream (GstMatroskaDemux * demux, GstEbmlRead * ebml)
    gst_flow_combiner_add_pad (demux->flowcombiner, context->pad);
  
    g_free (padname);
@@ -245,7 +235,7 @@ index 24a729485..0e2157a15 100644
  }
  
  static gboolean
-@@ -3085,9 +3101,23 @@ gst_matroska_demux_parse_tracks (GstMatroskaDemux * demux, GstEbmlRead * ebml)
+@@ -2768,9 +2784,23 @@ gst_matroska_demux_parse_tracks (GstMatroskaDemux * demux, GstEbmlRead * ebml)
  
      switch (id) {
          /* one track within the "all-tracks" header */
